# steer-opencell-design

./: .gitignore  404.html  AGENTS.md  CITATION.cff  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.txt  LICENSE  Procfile  README.md  SECURITY.md  app.py  demo.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  sitemap.xml  thickness_profile.prof
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cla.yml  docs.yml  draft-pdf.yml  main.yml
App/: app.py  cache_service.py  callbacks.py  custom_components.py  database_service.py  layouts.py  styles.py
App/assets/: clientside.css  clientside.js  slider_sync.js  style.css
App/current_collectors/: callback_helpers.py  callbacks.py  cell_operations.py  configs.py  current_collector_handlers.py  handlers.py  layout_configs.py  layouts.py  lists.py  material_handlers.py  orchestra.py
App/electrode_assembly/: layouts.py
App/electrodes/: callback_helpers.py  callbacks.py  cell_operations.py  configs.py  electrode_handlers.py  handlers.py  layouts.py  lists.py  orchestra.py
App/formulations/: callback_helpers.py  callbacks.py  configs.py  handlers.py  layouts.py  lists.py  orchestra.py
App/general/: cache_service.py  callback_helpers.py  callbacks.py  cell_operations.py  clientside_callbacks.py  context_managers.py  custom_components.py  enumerated_classes.py  handlers.py  layouts.py  orchestra.py  store.py  styles.py  trigger_router.py
App/layup/: callback_helpers.py  callbacks.py  configs.py  layouts.py  lists.py  orchestra.py
App/materials/: callback_helpers.py  callbacks.py  cell_operations.py  configs.py  handlers.py  lists.py
App/results/: callbacks.py  layouts.py  orchestra.py
Archive/: Cell Design Tool v6.ipynb  Cell_Design_Tool_Streamlit.py
Data/: Anode_Faradion_HC.csv  Anode_Faradion_HC_commercial.csv  Anode_LongTime_SHC300.csv  Cathode_Faradion_Gen2_4.1V.csv  Cathode_Faradion_Gen2_4.25V.csv  Cathode_Faradion_Gen2_4.35V.csv  database.db  materials_properties.db
Manuscript/: main.aux  main.bbl  main.blg  main.out  main.tex  paper.bib  paper.md
OpenCell/: DataManager.py  Decorators.py  Mixins.py  Utils.py
OpenCell/Constructions/: Cells.py  Containers.py  Electrodes.py
OpenCell/Formulations/: ElectrodeAssemblies.py  ElectrodeFormulations.py  Layups.py
OpenCell/Materials/: CurrentCollectors.py  ElectrodeMaterials.py  Electrolytes.py  RawMaterials.py  Separators.py  other.py
SteerEnergyStorage/: Constants.py  DataManager.py  Utils.py
SteerEnergyStorage/Constructions/: Cells.py  Containers.py  Electrodes.py  other.py
SteerEnergyStorage/Formulations/: ElectrodeAssemblies.py  ElectrodeFormulations.py  Stacks.py
SteerEnergyStorage/Materials/: CurrentCollectors.py  ElectrodeMaterials.py  Electrolytes.py  Ions.py  RawMaterials.py  Salts.py  Separators.py  Seperators.py  Solvents.py  core.py  other.py
api/: index.html
api/utils/: index.html
assets/: style.css  zoom.css
components_apps/: app.py  cache_service.py  styles.py
components_apps/assets/: style.css
components_apps/current_collectors/: callbacks.py  layouts.py  store.py
components_apps/general/: callbacks.py  custom_components.py  layouts.py
concepts/hierarchy/: index.html
concepts/propagation/: index.html
docs/: getting-started.md  index.md
getting-started/: index.html
search/: search_index.json
signatures/: cla.json
steer_opencell_design/: Constants.py  DataManager.py  Mixins.py  __init__.py
teardowns/: CBAK.ipynb  Cell_2.ipynb  Cell_4.ipynb  HiNa.ipynb  QNAS_NL.ipynb  QNAS_RL.ipynb  UniGrid_Cylindrical.ipynb  Vendor_D_NFPP.ipynb  Vendor_E_NFPP.ipynb  Vendor_G_NFM.ipynb  Vendor_G_NFPP.ipynb
test/: conftest.py  test_active_materials.py  test_anode_free_stacked_pouch.py  test_assembly.py  test_auxillary_components.py  test_capacity_curve_utils.py  test_cells.py  test_clip_tabs.py  test_constants.py  test_container_mixins.py  test_containers.py  test_current_collector.py  test_current_collectors.py  test_cylindrical_cell.py  test_electrode_formulations.py  test_electrodes.py  test_env_check.py  test_formulations.py  test_jellyroll.py  test_layups.py  test_materials.py  test_opencell_data_manager.py  test_plot_layouts.py  test_prismatic_container.py  test_protocols.py  test_rate_capability.py  test_separator.py  test_spiral_perf_regression.py  test_spiral_utils.py  test_stack.py  test_stacked_pouch.py  test_stacked_pouch_lfp.py  test_stacked_prismatic.py  test_stacked_prismatic_multi.py  test_stacks.py  test_tape.py  test_utils.py
tutorials/: Noah_curve_matching.ipynb  cell.pkl  cell_setup.ipynb  cell_setup_cylindrical.ipynb  cell_setup_multi_comp.ipynb  cell_setup_stacked_pouch.ipynb  cell_setup_stacked_pouch_polymer.ipynb  cell_setup_stacked_prismatic.ipynb  investigating_mass_loading.ipynb  investigating_sample_variation.ipynb  python_tutorial.ipynb  simple_class.ipynb
(+121 files in other folders)
