[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steer-opencell-design"
dynamic = ["version"]
description = "STEER OpenCell Design - A Python package for designing and modeling battery cells."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Nicholas Siemons", email = "nsiemons@stanford.edu"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "steer-core==0.2.14",
    "steer-materials==0.1.41",
    "numba>=0.59",
]

[project.urls]
Homepage = "https://github.com/stanford-developers/steer-opencell-design/"
Repository = "https://github.com/stanford-developers/steer-opencell-design/"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[tool.setuptools.dynamic]
version = {attr = "steer_opencell_design.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["steer_opencell_design*"]

[tool.pytest_env]
API_URL = "https://59xitvvsf2.execute-api.us-east-2.amazonaws.com/production"


