[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steer-opencell-design"
dynamic = ["version"]
description = "STEER OpenCell Design - A Python package for designing and modeling battery cells."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Nicholas Siemons", email = "nsiemons@stanford.edu"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "steer-core==0.2.18",
    "steer-materials==0.1.44",
    "numba>=0.59",
]

[project.urls]
Homepage = "https://github.com/stanford-developers/steer-opencell-design/"
Repository = "https://github.com/stanford-developers/steer-opencell-design/"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
]
# Tests also require the local reference database from steer-opencell-data
# (not on PyPI due to its Git LFS database size). Install with:
#   pip install git+https://github.com/stanford-developers/steer-opencell-data.git
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[tool.setuptools.dynamic]
version = {attr = "steer_opencell_design.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["steer_opencell_design*"]

[tool.pytest.ini_options]
testpaths = ["test"]
# `--cov-fail-under` enforces a hard floor on package-wide coverage.
# Current snapshot is 86 %; the floor is 80 % to leave room for small
# day-to-day fluctuations without false positives. Raise it as coverage
# improves so we never silently regress.
addopts = "--cov=steer_opencell_design --cov-report=term-missing --cov-report=xml --cov-fail-under=80"

[tool.coverage.run]
source = ["steer_opencell_design"]
branch = false
omit = [
    "*/__pycache__/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]


